exercise5/condor/925.0-error.txt
  File "Exercise5.py", line 67
    Matrix=np.
             ^
SyntaxError: invalid syntax
